[gd_scene load_steps=9 format=2]

[ext_resource path="res://Codes/game  menu.gd" type="Script" id=1]
[ext_resource path="res://fonts/Comic_Andy.ttf" type="DynamicFontData" id=2]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="DynamicFont" id=2]
size = 90
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 90
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 90
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 90
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 90
font_data = ExtResource( 2 )

[node name="menu" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GamePopupMenu" type="PopupMenu" parent="."]
light_mask = 0
material = SubResource( 1 )
margin_left = -132.013
margin_top = 17.9844
margin_right = -99.0133
margin_bottom = 60.9844
rect_scale = Vector2( 0.9, 0.9 )
rect_pivot_offset = Vector2( 91.8217, 35.8233 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="VBoxContainer" parent="GamePopupMenu"]
margin_left = 669.898
margin_top = 50.0
margin_right = 1067.9
margin_bottom = 576.0
rect_scale = Vector2( 1.2, 1.2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="chap 1 " type="Button" parent="GamePopupMenu/HSeparator"]
show_behind_parent = true
margin_right = 398.0
margin_bottom = 108.0
focus_previous = NodePath("../chap 2 ")
custom_fonts/font = SubResource( 2 )
text = "chapter 1"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="chap 2 " type="Button" parent="GamePopupMenu/HSeparator"]
show_behind_parent = true
margin_top = 112.0
margin_right = 398.0
margin_bottom = 220.0
focus_next = NodePath("../mini game")
focus_previous = NodePath("../chap 1 ")
custom_fonts/font = SubResource( 3 )
text = "Chapter 2"
flat = true

[node name="mini game" type="Button" parent="GamePopupMenu/HSeparator"]
margin_top = 224.0
margin_right = 398.0
margin_bottom = 332.0
focus_next = NodePath("../music on & off")
focus_previous = NodePath("../chap 2 ")
custom_fonts/font = SubResource( 4 )
text = "mini game"
flat = true

[node name="music on & off" type="Button" parent="GamePopupMenu/HSeparator"]
show_behind_parent = true
margin_top = 336.0
margin_right = 398.0
margin_bottom = 444.0
focus_neighbour_top = NodePath("../mini game")
focus_neighbour_bottom = NodePath("../quit Button")
focus_next = NodePath("../quit Button")
focus_previous = NodePath("../mini game")
custom_fonts/font = SubResource( 5 )
shortcut_in_tooltip = false
text = "settings"
flat = true

[node name="quit Button" type="Button" parent="GamePopupMenu/HSeparator"]
show_behind_parent = true
margin_top = 448.0
margin_right = 398.0
margin_bottom = 556.0
focus_neighbour_top = NodePath("../music on & off")
focus_next = NodePath("../chap 1 ")
focus_previous = NodePath("../music on & off")
custom_fonts/font = SubResource( 6 )
text = "quit"
flat = true
[connection signal="pressed" from="GamePopupMenu/HSeparator/chap 1 " to="." method="_on_chap_1_button_pressed"]
[connection signal="pressed" from="GamePopupMenu/HSeparator/chap 2 " to="." method="_on_chap_2__pressed"]
[connection signal="pressed" from="GamePopupMenu/HSeparator/mini game" to="." method="_on_mini_game_pressed"]
[connection signal="pressed" from="GamePopupMenu/HSeparator/music on & off" to="." method="_on_music_on__off_pressed"]
[connection signal="pressed" from="GamePopupMenu/HSeparator/quit Button" to="." method="_on_quit_Button_pressed"]
